fixed in footer contact.js where negetive margin made footer overlap with the rest of the content

--- a/src/styles/portfolio.css
+++ b/src/styles/portfolio.css
@@ -462,17 +462,9 @@
         overflow: hidden;
     }
 
-    /* .card.blueskies, .card.landa{
-        margin-left: -90vw;
-    } */
-    
-    /* .card.bookmark, .card.daytoday{
-        margin-right: -90vw;
-    } */
-
-    .contact{
+    /* .contact{
         margin-top: -40vh;
-    }
+    } */
 
 .contact > p,
 .contact > div,
